# azure-function-sample

./: README.md  __init__.py  host.json  pyproject.toml
.github/workflows/: main_development-codify-function4.yml
