[tool.poetry]
name = "publisher"
version = "0.1.0"
description = ""
authors = ["Jochen Rui <jochen.rui@codify.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-functions = "1.0.0a5"
azure-storage-queue = "^1.4"

[tool.poetry.dev-dependencies]
pylint = "^2.0"
azure-functions-worker = "1.0.0a6"
ptvsd = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"